--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,7 @@
     </p>
     {% include 'entry1.html' %}
     {% include 'entry2.html' %}
+    {% include 'entry3.html' %}
   </div>
 </body>
 </html>
