Some pre-study notes for the implementation of entry3. (It seems this may require setting up a local database cache)

--- a/templates/entry3.html
+++ b/templates/entry3.html
@@ -8,6 +8,25 @@
       <br><br>
       The items in the table will be fetched from the OSRS Wiki API 
       'https://prices.runescape.wiki/api/v1/osrs/' by combining tha mapping query with 'other queries'
+    
+      <br><br>
+      <b>Some Notes for implementation (3rd age amulet):</b>
+      <br><br>
+      The id-name mapping can be found from here: <br>
+      <em>https://prices.runescape.wiki/api/v1/osrs/mapping</em><br>
+      Then select the item in the list (10344)
+      <br><br>
+      Latest high-low prices can be found here: <br>
+      <em>https://prices.runescape.wiki/api/v1/osrs/latest?id=10344</em>
+      <br><br>
+      Daily Trading volume here (updates once per hour): <br>
+      <em>https://prices.runescape.wiki/api/v1/osrs/volumes</em> <br>
+      Then select the item in the list (10344)
+      <br><br>
+      For timeseries data. Use this: <br>
+      <em>https://prices.runescape.wiki/api/v1/osrs/timeseries?id=10344&timestep=5m</em>
+
+
     </p>
 
     <p>Table:</p>
