Added a SQLite backend database to enable indexing static OSRS WIKI data locally

--- a/templates/entry2.html
+++ b/templates/entry2.html
@@ -1,4 +1,3 @@
-<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/entry2table.css') }}">
 <div class="entry">
   <h2>Entry 2</h2>
   <div class="entry_content">
@@ -13,7 +12,7 @@
       The data in the table contains is everything fetched from the /mapping endpoint from the first 5 items.
     </p>
     <div>
-      <table id=entry2table>
+      <table id=entry2table class="entrytable">
         <tr>
           <!--
           <th>Item</th>
@@ -36,56 +35,18 @@
           <th>highalch</th>
           <tH>icon</tH>
         </tr>
+        {% for item in items %}
         <tr>
-          <td>{{items[0].name}}</td>
-          <td>{{items[0].id}}</td>
-          <td>{{items[0].members}}</td>
-          <td>{{items[0].lowalch}}</td>
-          <td>{{items[0].limit}}</td>
-          <td>{{items[0].value}}</td>
-          <td>{{items[0].highalch}}</td>
-          <td>{{items[0].icon}}</td>
+          <td>{{item.name}}</td>
+          <td>{{item.id}}</td>
+          <td>{{item.members}}</td>
+          <td>{{item.low_alch}}</td>
+          <td>{{item.limit}}</td>
+          <td>{{item.value}}</td>
+          <td>{{item.high_alch}}</td>
+          <td>{{item.icon}}</td>
         </tr>
-        <tr>
-          <td>{{items[1].name}}</td>
-          <td>{{items[1].id}}</td>
-          <td>{{items[1].members}}</td>
-          <td>{{items[1].lowalch}}</td>
-          <td>{{items[1].limit}}</td>
-          <td>{{items[1].value}}</td>
-          <td>{{items[1].highalch}}</td>
-          <td>{{items[1].icon}}</td>
-        </tr>
-        <tr>
-          <td>{{items[2].name}}</td>
-          <td>{{items[2].id}}</td>
-          <td>{{items[2].members}}</td>
-          <td>{{items[2].lowalch}}</td>
-          <td>{{items[2].limit}}</td>
-          <td>{{items[2].value}}</td>
-          <td>{{items[2].highalch}}</td>
-          <td>{{items[2].icon}}</td>
-        </tr>
-        <tr>
-          <td>{{items[3].name}}</td>
-          <td>{{items[3].id}}</td>
-          <td>{{items[3].members}}</td>
-          <td>{{items[3].lowalch}}</td>
-          <td>{{items[3].limit}}</td>
-          <td>{{items[3].value}}</td>
-          <td>{{items[3].highalch}}</td>
-          <td>{{items[3].icon}}</td>
-        </tr>
-        <tr>
-          <td>{{items[4].name}}</td>
-          <td>{{items[4].id}}</td>
-          <td>{{items[4].members}}</td>
-          <td>{{items[4].lowalch}}</td>
-          <td>{{items[4].limit}}</td>
-          <td>{{items[4].value}}</td>
-          <td>{{items[4].highalch}}</td>
-          <td>{{items[4].icon}}</td>
-        </tr>
+        {% endfor %}
       </table>
     </div>
   </div> <!-- Entry Content -->
