--- a/static/styles/entrytable.css
+++ b/static/styles/entrytable.css
@@ -1,19 +1,19 @@
-#entry2table {
+.entrytable {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 100%;
   }
   
-#entry2table td, #entry2table th {
+.entrytable td, .entrytable th {
 border: 1px solid #ddd;
 padding: 8px;
 }
 
-#entry2table tr:nth-child(even){background-color: #f2f2f2;}
+.entrytable tr:nth-child(even){background-color: #f2f2f2;}
 
-#entry2table tr:hover {background-color: #ddd;}
+.entrytable tr:hover {background-color: #ddd;}
 
-#entry2table th {
+.entrytable th {
 padding-top: 12px;
 padding-bottom: 12px;
 text-align: left;
