--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GETracked</title>
   <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/style.css') }}">
+  <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/entrytable.css') }}">
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.bundle.min.js""></script>
 
 </head>
@@ -23,6 +24,7 @@
     {% include 'entry1.html' %}
     {% include 'entry2.html' %}
     {% include 'entry3.html' %}
+    {% include 'entry4.html' %}
   </div>
 </body>
 </html>
