First version of the client side ajax to fetch information for main_table and main_chart.

--- a/templates/journal/entry4.html
+++ b/templates/journal/entry4.html
@@ -35,7 +35,7 @@
               "item_id": "${row.cells[1].innerText}"
             }`;
 
-            fetch("graph_data", 
+            fetch("journal/graph_data", 
             {
               method: 'POST',
               headers: {'Content-Type': 'application/json'},
