--- a/templates/journal/index.html
+++ b/templates/journal/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GETracked</title>
-  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon/getrecked.ico') }}">
+  <link rel="shortcut icon" href="{{ url_for('static', filename='scripts/main.js') }}">
   <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/journal/style.css') }}">
   <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/journal/entrytable.css') }}">
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.bundle.min.js""></script>
