--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -51,7 +51,7 @@ body {
     color: rgb(245, 236, 236);
 }
 
-#search {
+#search_old {
     display: none;
     vertical-align: middle;
     border-style: solid;
