Extended the item information with the newly indexed price data and volume data. Calculated additional profit and ROI% values to main table.

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,6 +33,11 @@
         <th>Name</th>
         <th>ID</th>
         <th>Value</th>
+        <th>Sell Price</th>
+        <th>Buy Price</th>
+        <th>Approx. Profit</th>
+        <th>ROI%</th>
+        <th>Volume (Daily)</th>
         <th>GE limit (4h)</th>
         <th>Members Only</th>
         <th>Low Alch.</th>
