Updated title ad description

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,10 +22,10 @@
   
   <div id="content">
   
-    <h1 id="title">GE Tracked</h1>  
+    <h1 id="title">OSRS GE Tracker</h1>  
     <p id="description">
-      This website is still in PoC (Proof of Concept). The end goal of this website
-      is to provide real-time graph data about item buy/sell values in the grand exchange.
+      This website is an SPA Web application providing real-time price data for 
+      all tradeable items in OSRS grand exchange.
     </p>
 
     <table id=main_table>
