Made main table scrollable to enable more rows in a single query

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,22 +28,28 @@
       all tradeable items in OSRS grand exchange.
     </p>
 
-    <table id=main_table>
-      <tr>
-        <th>Name</th>
-        <th>ID</th>
-        <th>Value</th>
-        <th>Sell Price</th>
-        <th>Buy Price</th>
-        <th>Approx. Profit</th>
-        <th>ROI%</th>
-        <th>Volume (Daily)</th>
-        <th>GE limit (4h)</th>
-        <th>Members Only</th>
-        <th>Low Alch.</th>
-        <th>High Alch.</th>
-      </tr>
-    </table>
+    <div id="table_container">
+      <table id=main_table>
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>ID</th>
+            <th>Value</th>
+            <th>Sell Price</th>
+            <th>Buy Price</th>
+            <th>Approx. Profit</th>
+            <th>ROI%</th>
+            <th>Volume (Daily)</th>
+            <th>GE limit (4h)</th>
+            <th>Members Only</th>
+            <th>Low Alch.</th>
+            <th>High Alch.</th>
+          </tr>
+        </thead>
+        <tbody>
+        </tbody>
+      </table>
+    </div>
 
     <div class="chart_container">
       <canvas id="main_chart"></canvas>
