--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -68,17 +68,28 @@ body {
     padding: 10px 10px;
 }
 
-#main_table {
-    font-family: Arial, Helvetica, sans-serif;
-    border-collapse: collapse;
-    width: 95%;
+/* Fix table head */
+#table_container {
     margin-left: auto;
     margin-right: auto;
+    width: 95%;
+    overflow-y: auto;
+    height: 410px;
+}
+#table_container th {
+    position: sticky;
+    top: 0;
+}
+
+#main_table {
+    width: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
 }
 
 #main_table td, #main_table th {
     border: 1px solid #ddd;
-    padding: 8px;
+    padding: 8px 16px;
 }
 
 #main_table tr:nth-child(even){background-color: #f2f2f2;}
@@ -107,8 +118,4 @@ body {
     height: 50%;
     margin-left: auto;
     margin-right: auto;
-}
-
-*, ::before, ::after {
-    box-sizing: inherit;
 }
