--- a/templates/index.html
+++ b/templates/index.html
@@ -53,6 +53,15 @@
 
     <div class="chart_container">
       <canvas id="main_chart"></canvas>
+
+      <div id="timesteps">
+        <span>Time Range:</span>
+        <ul>
+          <li>24 Hours</li>
+          <li>Week</li>
+          <li>Quarter</li>
+        </ul>
+      </div>
     </div>
 
   </div>
